blx-ingress/blx-cic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-blx
  namespace: blx-ingress
  labels:
    app: cic-blx
spec: 
      serviceAccountName: sa-blx
      containers:
      - name: cic-blx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.7.6"
        args:
          - --ingress-classes
            blx-ingress
          - --feature-node-watch
            true
        imagePullPolicy: IfNotPresent
