blx-ingress/blx-mgmt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blx-mgmt
  namespace: blx-ingress
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: blx-mgmt
  namespace: blx-ingress
subsets:
  - addresses:
      - ip: 192.0.0.1
    ports:
      - port: 9080
